fix: style bug in dark mode

--- a/.dumi/global.less
+++ b/.dumi/global.less
@@ -1,3 +1,10 @@
+[data-prefers-color='dark'] {
+  color-scheme: dark;
+}
+
+[data-prefers-color='light'] {
+  color-scheme: light;
+}
 #root {
   .dumi-default-header-left {
     width: 300px;
